// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-checkbox has a "Hello World" tooltip 1`] = `
<div
  class="Vlt-checkbox"
>
  <label>
    <span
      class="Vlt-checkbox__button"
    >
      <input
        type="checkbox"
      />
      <span
        class="Vlt-checkbox__icon"
      />
    </span>
     Is test ok? 
    <span
      class="Vlt-tooltip"
    >
      
      <svg
        class="Vlt-icon Vlt-icon--small Vlt-blue"
      >
        <use
          xlink:href="#V_Vlt-icon-help-negative"
        />
      </svg>
      
    </span>
  </label>
</div>
`;

exports[`vlt-checkbox is disabled 1`] = `
<div
  class="Vlt-checkbox"
>
  <label>
    <span
      class="Vlt-checkbox__button"
    >
      <input
        disabled=""
        type="checkbox"
      />
      <span
        class="Vlt-checkbox__icon"
      />
    </span>
     Is test ok? 
    <!--v-if-->
  </label>
</div>
`;

exports[`vlt-checkbox renders correctly with label "Is test ok?" 1`] = `
<div
  class="Vlt-checkbox"
>
  <label>
    <span
      class="Vlt-checkbox__button"
    >
      <input
        type="checkbox"
      />
      <span
        class="Vlt-checkbox__icon"
      />
    </span>
     Is test ok? 
    <!--v-if-->
  </label>
</div>
`;
